# Activity_Walk_Est

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt
ActWalkEst/ActivityRec/: prediction.py
ActWalkEst/SpeedEst/: model.py  model2.py  model3.py  model4.py  model5.py  prediction.py
ActWalkEst/UI/: ui1.py
ActWalkEst/main/: run.py
ActWalkEst/polar/: collect_polar.py  polar.py  run.py  search_polar.py
ActWalkEst/resources/: walking_model4.h5
test/: dry_run.py  main_run.py  test.py
