[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[metadata]
name = "ActWalkEst"
version = "0.0.1"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[project]
name = "ActWalkEst"
version = "0.0.1"
authors = [
  { name="Meet Mevada,Prakyath Kanthraju", email="mevadameet95@gmail.com,paknth3@uic.edu" },
]
description = "Sample project for medium article"
readme = "README.md"
requires-python = ">=3.8"
