[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[metadata]
name = "ActWalkEst"
version = "0.0.1"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[project]
name = "ActWalkEst"
version = "0.0.1"
authors = [
  { name="Meet Mevada", email="mevadameet95@gmail.com" },
  {name="Prakyath Kanthraju",email="paknth3@uic.edu"}
]
description = "Activity And Walking speed estimation using PolatH10"
readme = "README.md"
requires-python = ">=3.8"
